# pincers

./: .gitattributes  .travis.yml  Cargo.toml  LICENSE  PKGBUILD  README.md
pgpubkeys/: Cargo.toml  README.md
pgpubkeys/src/: keybase.rs  lib.rs
src/: cli.rs  hashing.rs  main.rs  read.rs
src/gpg/: mod.rs
src/gpg/pubkeys/: README.md  http.rs  keybase.rs  local.rs  mod.rs
tests/fixtures/: args.sh  echo.sh  echo.sh.sig  input.sh  input.sh.asc  long.sh  long.sh.gpg  lutostag.pub  return-code.sh.asc
