[package]
name = "pincers"
version = "0.1.0"
authors = ["Greg Lutostanski <greg.lutostanski@mobilityhouse.com>"]
description = "A more secure way to run scripts from the web"

[dependencies]
clap = "2.32.0"
reqwest = "0.9.4"
digest = "0.8.0"
md-5 = "0.8.0"
sha-1 = "0.8.0"
sha2 = "0.8.0"
sha3 = "0.8.0"
