[package]
name = "pincers"
version = "0.2.0"
authors = ["Greg Lutostanski <greg.lutostanski@mobilityhouse.com>"]
description = "A more secure way to run scripts from the web"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lutostag/pincers"
keywords = ["crypto", "hash", "digest", "install", "shell"]

[dependencies]
clap = "2.32.0"
digest = "0.8.0"
failure = "0.1.3"
hex = "0.3.2"
log = "0.4.6"
md-5 = "0.8.0"
reqwest = "0.9.4"
sha-1 = "0.8.0"
sha2 = "0.8.0"
sha3 = "0.8.0"
simplelog = "0.5.3"
lazy_static = "1.3.0"
maplit = "1.0.1"
