[package]
name = "pgpubkeys"
version = "0.1.0"
authors = ["Greg Lutostanski <greg.lutostanski@mobilityhouse.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/lutostag/pincers"
keywords = ["crypto", "hash", "digest", "hkp"]

[dependencies]
failure = "0.1.3"
log = "0.4.6"
reqwest = "0.9.4"
simplelog = "0.5.3"
